--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Read Later List</string>
+    <string name="content_authority">com.example.mborzenkov.readlaterlist</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_item">Edit Item</string>
     <string name="large_text">
