--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,14 @@
     <string name="content_authority">com.example.mborzenkov.readlaterlist</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_item">Edit Item</string>
+
+
+    <string name="edititem_label_hint">Label</string>
+    <string name="edititem_description_hint">Description</string>
+    <string name="edititem_color_hint">Color</string>
+    <string name="edititem_title_add">Add item</string>
+    <string name="edititem_title_edit">Edit item</string>
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
