--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="edititem_title_edit">Edit item</string>
     <string name="mainlist_empty_label">List is empty</string>
     <string name="mainlist_empty_description">You can add something to list with button +fdffddfdffddfdfdf d</string>
+    <string name="title_activity_colorpicker">Choose color</string>
 
 
     <string name="large_text">
