--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="mainlist_empty_label">List is empty</string>
     <string name="mainlist_empty_description">You can add something to list with button +fdffddfdffddfdfdf d</string>
     <string name="title_activity_colorpicker">Choose color</string>
+    <string name="edititem_error_title_empty">Please enter label</string>
 
 
     <string name="large_text">
