--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,16 @@
     <string name="mainlist_empty_description">You can add something to list with button +fdffddfdffddfdfdf d</string>
     <string name="title_activity_colorpicker">Choose color</string>
     <string name="edititem_error_title_empty">Please enter label</string>
+    <string name="edititem_menu_delete">Delete</string>
+    <string name="mainlist_menu_delete_all">Delete all</string>
+    <string name="mainlist_menu_add_placeholders">Fill placeholders</string>
+    <string name="mainlist_menu_add_placeholders_label">Labeeeeel</string>
+    <string name="mainlist_menu_delete_all_question_title">Remove all entries</string>
+    <string name="mainlist_menu_delete_all_question_text">Are you sure?</string>
+    <string name="mainlist_menu_add_placeholders_question_title">This action will add placeholders</string>
+    <string name="mainlist_menu_add_placeholders_question_text">Proceed?</string>
+    <string name="edititem_menu_delete_question_title">Delete enty</string>
+    <string name="edititem_menu_delete_question_text">Are you sure?</string>
 
 
     <string name="large_text">
