--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="snackbar_item_added">Item added</string>
     <string name="snackbar_item_edited">Item edited</string>
     <string name="snackbar_item_removed">Item removed</string>
+    <string name="db_error_uriunknown">Unknown uri: </string>
+    <string name="db_error_insert">Failed to insert row in: </string>
 
 
 
