--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,4 +28,5 @@
     <string name="snackbar_item_removed">Запись удалена</string>
     <string name="title_activity_colorpicker">Выбор цвета</string>
     <string name="title_activity_edit_item">Редактирование записи</string>
+    <string name="edititem_menu_save">Сохранить</string>
 </resources>
