--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
         <string name="snackbar_item_added">Item added</string>
         <string name="snackbar_item_edited">Item edited</string>
         <string name="snackbar_item_removed">Item removed</string>
+        <!-- Список -->
+        <string name="mainlist_icon_contentdescription">Color</string>
 
     <!-- EditItemActivity -->
         <!-- Заголовки -->
@@ -36,6 +38,8 @@
         <string name="edititem_menu_delete_question_title">Delete item</string>
         <string name="edititem_menu_delete_question_text">Are you sure to delete item?</string>
         <string name="edititem_menu_save">Save</string>
+        <!-- Список -->
+        <string name="edititem_icon_contentdescription">Color</string>
 
     <!-- ColorPickerActivity -->
     <string name="colorpicker_chosen_label">Choose color</string>
