Layout with settings
Only layout and id’s in values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,8 @@
         <string name="mainlist_empty_label">List is empty</string>
         <string name="mainlist_empty_description">Add something to list with button on bottom right corner.</string>
         <!-- Меню -->
-        <string name="mainlist_menu_delete_all">Delete all</string>
         <string name="mainlist_menu_delete_all_question_title">Delete all</string>
         <string name="mainlist_menu_delete_all_question_text">This action will delete everything from db. Are you sure to proceed?</string>
-        <string name="mainlist_menu_add_placeholders">Fill placeholders</string>
         <string name="mainlist_menu_add_placeholders_question_title">Fill with placeholders</string>
         <string name="mainlist_menu_add_placeholders_question_text">This action will add placeholders. Proceed?</string>
         <string name="mainlist_menu_add_placeholders_label">Labeeeeel</string>
@@ -25,6 +23,30 @@
         <!-- Поиск -->
         <string name="searchable_mainlist_hint">Search items</string>
         <string name="mainlist_menu_search">Search</string>
+        <!-- Фильтр -->
+        <!-- TODO: Перевод strings -->
+        <string name="mainlist_drawer_title">Settings</string>
+        <string name="mainlist_drawer_filters_title">Filter by</string>
+        <string name="mainlist_drawer_filters_default">Default</string>
+        <string name="mainlist_drawer_filters_save">+ Save filter</string>
+        <string name="mainlist_drawer_filters_remove">- Remove filter</string>
+        <string name="mainlist_drawer_date_creation">Creation date</string>
+        <string name="mainlist_drawer_date_modified">Last modify date</string>
+        <string name="mainlist_drawer_date_viewed">Last view date</string>
+        <string name="mainlist_drawer_datefrom_hint">from</string>
+        <string name="mainlist_drawer_dateto_hint">to</string>
+        <string name="mainlist_drawer_color_title">Colors</string>
+        <string name="mainlist_drawer_sort_title">Sort by</string>
+        <string name="mainlist_drawer_sort_label">Label</string>
+        <string name="mainlist_drawer_sort_created">Created</string>
+        <string name="mainlist_drawer_sort_modified">Modified</string>
+        <string name="mainlist_drawer_sort_viewed">Viewed</string>
+        <string name="mainlist_drawer_backup_title">Backup data</string>
+        <string name="mainlist_drawer_backup_save">Save</string>
+        <string name="mainlist_drawer_backup_restore">Restore</string>
+        <string name="mainlist_drawer_debug_title">Debug options</string>
+        <string name="mainlist_drawer_deleteall_title">Delete all</string>
+        <string name="mainlist_drawer_fillplaceholders_title">Fill data</string>
 
     <!-- EditItemActivity -->
         <!-- Заголовки -->
