--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
         <string name="edititem_menu_delete_question_title">Delete item</string>
         <string name="edititem_menu_delete_question_text">Are you sure to delete item?</string>
         <string name="edititem_menu_save">Save</string>
+        <string name="edititem_menu_back_question_title">Undo changes</string>
+        <string name="edititem_menu_back_question_text">Are you sure to undo changes?</string>
         <!-- Список -->
         <string name="edititem_icon_contentdescription">Color</string>
 
