Added dates to layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,10 +63,12 @@
         <!-- Заголовки -->
         <string name="edititem_title_add">New item</string>
         <string name="edititem_title_edit">Edit item</string>
-        <!-- Поля ввода -->
+        <!-- Поля -->
         <string name="edititem_label_hint">Label</string>
         <string name="edititem_description_hint">Description</string>
         <string name="edititem_color_hint">Color</string>
+        <string name="edititem_date_created">Created:</string>
+        <string name="edititem_date_modified">Modified:</string>
         <!-- Ошибки -->
         <string name="edititem_error_title_empty">Please enter label</string>
         <!-- Меню -->
