--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -63,4 +63,6 @@
     <string name="searchable_mainlist_hint">Поиск по базе</string>
     <string name="edititem_menu_back_question_text">\"Вы уверены, что хотите отменить изменения?\"</string>
     <string name="edititem_menu_back_question_title">Отменить изменения</string>
+    <string name="edititem_date_created">Создан:</string>
+    <string name="edititem_date_modified">Изменен:</string>
 </resources>
