--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,12 @@
         <string name="mainlist_longloading_title">Loading is active</string>
         <string name="mainlist_longloading_text">Some long action is still running. Please wait until it finished before starting new long action.</string>
 
+    <!-- Уведомления -->
+        <string name="notification_backup_save_title">Saving backup</string>
+        <string name="notification_backup_restore_title">Restoring from backup</string>
+        <string name="notification_debug_fillplaceholders_title">Filling with placeholders</string>
+        <string name="notification_debug_deleteall_title">Deleting all data</string>
+
     <!-- EditItemActivity -->
         <!-- Заголовки -->
         <string name="edititem_title_add">New item</string>
