--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -52,11 +52,11 @@
     <string name="mainlist_drawer_filters_remove_question_title">Удаление фильтра</string>
     <string name="mainlist_drawer_filters_save_question_title">Назовите новый фильтр</string>
     <string name="mainlist_drawer_filters_title">Фильтры</string>
-    <string name="mainlist_drawer_sort_created">Добавлению</string>
-    <string name="mainlist_drawer_sort_title">Сортировать по</string>
-    <string name="mainlist_drawer_sort_label">Названию</string>
-    <string name="mainlist_drawer_sort_modified">Изменению</string>
-    <string name="mainlist_drawer_sort_viewed">Просмотру</string>
+    <string name="mainlist_drawer_sort_created">Добавлено</string>
+    <string name="mainlist_drawer_sort_title">Порядок</string>
+    <string name="mainlist_drawer_sort_label">Название</string>
+    <string name="mainlist_drawer_sort_modified">Изменено</string>
+    <string name="mainlist_drawer_sort_viewed">Просмотрено</string>
     <string name="mainlist_drawer_title">Настройки</string>
     <string name="mainlist_menu_search">Поиск</string>
     <string name="searchable_mainlist_hint">Поиск по базе</string>
@@ -80,4 +80,5 @@
     <string name="mainlist_conflict_title">Выберите версию для сохранения</string>
     <string name="mainlist_user_change_question_text">Пожалуйста введите ID пользователя:</string>
     <string name="mainlist_user_change_question_title">Смена пользователя</string>
+    <string name="mainlist_drawer_sort_manual">Вручную</string>
 </resources>
